fix: adjust bottom position of project float list for better visibility

--- a/src/global.css
+++ b/src/global.css
@@ -1613,7 +1613,7 @@ svg {
 .project-float-list {
   position: fixed;
   right:  0;
-  bottom: 0;
+  bottom: 10;
   left:   0;
   z-index: 47;
 
